@@ -533,7 +533,11 @@ def ignoreMyExceptions
 In order to generate a temporary directory for test and delete it after test, annotate a member field of type
 `java.io.File`, `java.nio.file.Path` or untyped using `def` in a spec class (`def` will inject a `Path`).
 Alternatively, you can annotate a field with a custom type that has a public constructor accepting either `java.io.File` or `java.nio.file.Path` as its single parameter (see <<utilities.adoc#file-stystem-fixture, FileSystemFixture>> for an example).
-If the annotated field is `@Shared`, the temporary directory will be shared in the corresponding specification, otherwise every feature method and every iteration per parametrized feature method will have their own temporary directories:
+If the annotated field is `@Shared`, the temporary directory will be shared in the corresponding specification, otherwise every feature method and every iteration per parametrized feature method will have their own temporary directories.
+
+Since Spock 2.4, you can also use parameter injection with `@TempDir`.
+The types follow the same rules as for field injection.
+Valid methods are `setup()`, `setupSpec()`, or any feature methods.
 
 [source,groovy,indent=0]
 ----
